--- a/src/css/sections/dealerships.css
+++ b/src/css/sections/dealerships.css
@@ -50,7 +50,7 @@
   justify-items: center;
 
   /* ensures the card doesn't touch the map edges */
-  padding: var(--spacing-section);
+  padding: var(--spacing-flow);
 
   /* Fluid Height */
   min-height: clamp(400px, 65vh, 600px);
@@ -92,6 +92,12 @@
   width: fit-content;
 }
 
+@media (max-width: 320px){
+    .dealer-title span{
+        display: inline;
+    }
+}
+
 @media (min-width: 600px) {
   .dealer-map {
     justify-content: start;
@@ -117,6 +123,6 @@
 
 @media (min-width: 900px) {
     .dealerships.section {
-    padding-block: var(--spacing-section-large);
+    padding-block: var(--spacing-section);
     }
 }
