--- a/src/css/sections/footer.css
+++ b/src/css/sections/footer.css
@@ -23,7 +23,10 @@ footer {
   align-items: center;
 }
 
-
+.footer .footer-title {
+    font-size: var(--font-size-title);
+    padding-block: var(--spacing-flow);
+}
 
 
 /* Navigation menus */
@@ -47,3 +50,7 @@ footer {
     font-size: var(--font-size-small);
 }
 
+.footer .link:hover {
+    color: var(--color-text-muted);
+    text-decoration: none;
+}
